fix: overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,5 +4,7 @@
     width: 100%;
     min-height: 100vh;
     background-color: $background-main;
+    position: relative;
+
     overflow: hidden;
 }
