--- a/src/index.scss
+++ b/src/index.scss
@@ -23,5 +23,6 @@ code {
 }
 
 #root {
+  position: relative;
   overflow: hidden;
 }
